--- a/veip/templates/veip/index.html
+++ b/veip/templates/veip/index.html
@@ -8,6 +8,7 @@
     <h1>Параметры VEIP</h1>
     <form action="{% url 'veip:vivod' %}" method="post">
         {% csrf_token %}
+        <input type="text" name="speed"/>
         <input type="text" name="radius"/>
         <button type="submit">GO</button>
     </form>
