--- a/veip/templates/veip/index.html
+++ b/veip/templates/veip/index.html
@@ -8,7 +8,9 @@
     <h1>Параметры VEIP</h1>
     <form action="/veip/vivod/" method="post">
         {% csrf_token %}
-        <input type="text" name="speed"/>
+        <label>Введите скорость (м/с):</label>
+        <input type="text" name="speed"/><br/>
+        <label>Введите радиус (м):</label>
         <input type="text" name="radius"/>
         <button type="submit">GO</button>
     </form>
