--- a/veip/templates/veip/index.html
+++ b/veip/templates/veip/index.html
@@ -3,14 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>VEIP</title>
+    <!--link rel="stylesheet" href="./../../../local/css/general.css"/-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Параметры VEIP</h1>
-    <form action="/veip/vivod/" method="post">
-        {% csrf_token %}
-        <input type="text" name="speed"/>
-        <input type="text" name="radius"/>
-        <button type="submit">GO</button>
-    </form>
+<h1>Параметры VEIP</h1>
+<form action="/veip/vivod/" method="post" onsubmit="">
+    {% csrf_token %}
+    <table class="">
+        <tr>
+            <td>
+                <label for="speed">Введите скорость (м/с):</label>
+            </td>
+            <td>
+                <input id="speed" type="number" name="speed" required value="12"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label for="radius">Введите радиус (м):</label>
+            </td>
+            <td>
+                <input id="radius" type="number" name="radius" required value="350"/>
+            </td>
+        </tr>
+    </table>
+    <button type="submit">GO</button>
+</form>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--script src="./../../../local/js/veip.js"></script-->
 </html>
