--- a/kortes/templates/kortes/index.html
+++ b/kortes/templates/kortes/index.html
@@ -3,6 +3,6 @@
 Редактор участков
 {% endblock %}
 {% block content %}
-<div class="shapka"></div>
+<div class="shapka">КОРТЭС-2</div>
 
 {% endblock %}
