Добавлена возможность редактировать UchSTRUCT. Добавлены заблокированные поля для ввода параметров и закоментированная возможность их считать.

--- a/kortes/templates/kortes/base.html
+++ b/kortes/templates/kortes/base.html
@@ -25,12 +25,16 @@
 
             <!-- Modal Header -->
             <div class="modal-header">
-                <h4 class="modal-title">Modal Heading</h4>
+                <h4 class="modal-title">
+                    {% block modal_title %}
+                    Modal Header
+                    {% endblock %}
+                </h4>
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
 
             <!-- Modal body -->
-            <div class="modal-body" style="max-height: 72vh">
+            <div class="modal-body" style="max-height: 72vh; overflow: scroll">
                 {% block modal_body %}
                 <iframe style="height: 62vh; width: 91vw;"></iframe>
                 {% endblock %}
