--- a/track/templates/track/ctgs_types_train.html
+++ b/track/templates/track/ctgs_types_train.html
@@ -1,29 +1,50 @@
-{% extends 'kortes/base.html' %}
-{% load static %}
-{% block content %}
 {% if categs %}
 <p>Категории и типы поездов:</p>
 <div class="row">
     <div class="col-7">
+        <p class="text-primary">
+            Категории<br/>
+            (в порядке убывания приоритета)
+        </p>
         <table class="table table-striped table-hover">
-            <tr>
-                <th>Категории</th>
-                <th>PutSpec</th>
+            <!--tr>
                 <th>RsrvC1</th>
                 <th>Массы составов (т) по направлениям</th>
+                <th>Категории</th>
+                <th>PutSpec</th>
+            </tr-->
+            <tr>
+                <th>Наименование</th>
+                <th>Пути следования</th>
             </tr>
             {% for x in categs %}
-            <tr>
+            <tr id="tr{{ forloop.counter }}" onclick="
+            clearThenAppendRows({{ x.TrTYP }})
+            ">
                 <td>{{ x.CatgNam }}</td>
+                <td>{{ mGput }}</td>
+                <!--td>{{ x.CatgNam }}</td>
                 <td>{{ x.PutSpec }}</td>
                 <td>{{ x.RsrvC1 }}</td>
-                <td>{{ x.TrTYP }}</td>
+                <td>{{ x.TrTYP }}</td-->
             </tr>
             {% endfor %}
         </table>
     </div>
     <div class="col-5">
-
+        <p class="text-primary">
+            Массы составов, т,<br/>
+            по направлениям
+        </p>
+        <table class="table table-striped table-hover" id="cat_types_train_table">
+            <thead>
+            <tr>
+                <th>нечетн.</th>
+                <th>четн.</th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
     </div>
 </div>
 <!--
@@ -35,4 +56,3 @@
 {% else %}
 <p>Не найдено категорий и типов поездов</p>
 {% endif %}
-{% endblock %}
